Revert "Refactor to use generics and streamline method calls"
This reverts commit 4afaf944d3ec3e0cfc9c4bb799892d5bb02bc6ce.